Added solution to check whether Data Type in Firebase is correct to prevent ClassCastException. Added proper Waitlist functionality (i.e: enrolled user drops course, first user in line on waitlist is added, second user in waitlist becomes next in line, and so on).